# Surface-Normal-Estimation

./: README.md
Normal/OpenGL/: normal_pub.frag
Normal/OpenGL/stereo_simulator_min_dep/: README.md  affine.cpp  affine_normal.cpp  app.cpp  app.hpp  build.sh  calibration.cpp  calibration.hpp  camera.cpp  camera.hpp  canny.cpp  canny.hpp  comparison.cpp  cross_normal.cpp  d2nt.cpp  d2nt.hpp  hdr.hdr  imgui.ini  main.cpp  measure.cpp  meson.build  noiseadder.cpp  normalsdisplay.cpp  ogl_normal.m  pca.cpp  pca.hpp  renderstep.cpp  renderstep.hpp  run.sh  run_cli_test.sh  run_no_build.sh  save_texture.cpp  save_texture.hpp  sda.cpp  sda.hpp  sliding_statistics.hpp  test.tiff  testconfig.cpp  testconfig.hpp  textures.cpp  (+3 more)
Normal/OpenGL/stereo_simulator_min_dep/models/: bunny.mtl  pyramid.blend  sphere.blend  sphere.mtl
Normal/OpenGL/stereo_simulator_min_dep/shaders/: affine_and_position.frag  disparity.frag  disparity.vert  disparity_.frag  disparity_noise.frag  disparity_sphere.frag  frag.frag  normals.geom  normals_affine.vert  normals_cross.vert  normals_lsq_affine.vert  points.frag  screen.frag  screen.vert  triangulate.vert  vert.vert
Normal/OpenGL/stereo_simulator_min_dep/shaders/modular/: affine.frag  affine_pub.frag  canny.frag  canny_prepare.frag  color.frag  comparison.frag  errorstats.comp  gradient.frag  laplacian.frag  mrf_refine.frag  ne_affine.frag  ne_cp2tv.frag  ne_cross.frag  ne_d2nt.frag  ne_sda_init.frag  ne_sda_step.frag  ne_svd_pca.frag  noise.frag  normals.geom  normals.vert  pointcloud.vert  screen.vert  texturecolor.frag  textureview.frag  transform.frag  triangulate.frag
Normal/OpenGL/stereo_simulator_min_dep/subprojects/miniwrapper/: build.sh  imgui_impl_opengl3.cpp_old  imgui_impl_sdl2.cpp_old  meson.build
Normal/OpenGL/stereo_simulator_min_dep/subprojects/miniwrapper/includes/: ArrayBuffer.hpp  ElementArrayBuffer.hpp  FrameBufferObject.hpp  Mesh.hpp  ProgramObject.hpp  ShaderObject.hpp  ShaderStorageBufferObject.hpp  Texture2D.hpp  VertexArrayObject.hpp  imgui_impl_opengl3.h_old  imgui_impl_sdl2.h_old  miniwrapper.hpp
Normal/OpenGL/stereo_simulator_min_dep/subprojects/miniwrapper/src/: ArrayBuffer.cpp  FrameBufferObject.cpp  GLDebugMessageCallback.cpp  Mesh.cpp  ProgramObject.cpp  ShaderObject.cpp  Texture2D.cpp  VertexArrayObject.cpp  miniwrapper.cpp
Normal/OpenGL/stereo_simulator_min_dep/tests/: 000000_10.txt  000001_10.txt  000002_10.txt  000003_10.txt  000004_10.txt  malaga.calib
Normal/OpenGL/stereo_simulator_min_dep/tests/carla/: carla.calib  carla_birds_eye_disp.tiff  disp7.tiff
Normal/OpenGL/stereo_simulator_min_dep/tests/cityscapes/: cityscapes.calib
Normal/OpenGL/stereo_simulator_min_dep/tests/cmdlinetest/: knight.calib  knight_disp_0.01.tiff  knight_disp_0.02.tiff  knight_disp_0.05.tiff  knight_disp_0.1.tiff  knight_disp_0.2.tiff  knight_disp_0.3.tiff  knight_disp_0.tiff  torus.calib  torus_disp_0.01.tiff  torus_disp_0.02.tiff  torus_disp_0.05.tiff  torus_disp_0.1.tiff  torus_disp_0.2.tiff  torus_disp_0.3.tiff  torus_disp_0.tiff
Normal/OpenGL/stereo_simulator_min_dep/tests/irs/: d_1.exr  d_60.exr  irs.calib  n_1_corr.exr
Normal/OpenGL/stereo_simulator_min_dep/tests/kitti/: 1_col.tiff  kitti15.calib
Normal/OpenGL/stereo_simulator_min_dep/tests/middlebury/: middlebury.calib
Normal/OpenGL/stereo_simulator_min_dep/tests/sdasne_testset/: normal_transform.txt  pineapple_disp.tiff  sdasne_hard.calib
Normal/Python/middlebury/: piano.calib
Rectification/: rectification_new.ipynb
